--- a/app/views/devise/registrations/_new.html.haml
+++ b/app/views/devise/registrations/_new.html.haml
@@ -1,21 +1,21 @@
-%h2.text-center Bienvenido a Kiwii
-%ul.nav.nav-pills.nav-justified
-
-  %li.active
-    %a{href:"#"} Paso 1
-  %li.disabled
-    %a{href:"#"} Paso 2
-%br
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+%h2 Sign up
+= form_for(resource, :as => resource_name,
+           :url => registration_path(resource_name),
+           :html => {:id => "sign_up_user"},
+           :format => :json,
+           :remote => true,
+           :validate => true ) do |f|
   = devise_error_messages!
+  %div{id: "error-messages"}
+    %p
   %div
-    =f.label "Nombre Propietario"
+    =f.label :name
     %br
-    =f.text_field :name
+    =f.text_field :name, :autofocus => true
   %div
     = f.label :email
     %br/
-    = f.email_field :email, :autofocus => true
+    = f.email_field :email
   %div
     = f.label :password
     %br/
@@ -24,5 +24,4 @@
     = f.label :password_confirmation
     %br/
     = f.password_field :password_confirmation
-  %div= f.submit "Sign up"
-= render "devise/shared/links"
+  %div= f.submit "Sign up", class: 'btn btn-success btn-medium'
