--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,14 +1,21 @@
 %h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+= form_for(resource, :as => resource_name,
+           :url => registration_path(resource_name),
+           :html => {:id => "sign_up_user"},
+           :format => :json,
+           :remote => true,
+           :validate => true ) do |f|
   = devise_error_messages!
+  %div{id: "error-messages"}
+    %p
   %div
     =f.label :name
     %br
-    =f.text_field :name
+    =f.text_field :name, :autofocus => true
   %div
     = f.label :email
     %br/
-    = f.email_field :email, :autofocus => true
+    = f.email_field :email
   %div
     = f.label :password
     %br/
