--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,12 +12,13 @@
 
     .navbar-collapse.collapse
 
-      %a.div-registro.navbar-right{"data-toggle"=>"modal","data-target"=>"#regModal"}
-        %btn.btn.btn-success.btn-registro Crear una cuenta
-
-
-      %span.navbar-right.link-login{id: "head-signin"}
-        %a.signin{href: new_user_session_path } Entar
+      -if user_signed_in?
+        =current_user.email
+      -else
+        %a.div-registro.navbar-right{"data-toggle"=>"modal","data-target"=>"#sign_up"}
+          %btn.btn.btn-success.btn-registro Crear una cuenta
+        %span.navbar-right.link-login{id: "head-signin"}
+          %a.signin{href: new_user_session_path } Entar
 
     / /.navbar-collapse
 / Main jumbotron for a primary marketing message or call to action
@@ -48,10 +49,10 @@
     .col-md-12
       //%img{src: 'images/kiwii-index.jpg'}
 
-      %h2 Heading
-      %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      %p
-        %a.btn.btn-default{href: "#", role: "button"} View details »
+      %h2 Lista de Restaurantes
+      %p Aqui se encontrara la lista de restaurantes registrados
+
+  =link_to "Borrar", destroy_user_session_path ,:method => :delete
   //tercera fila
   %ul
     .col-md-3
@@ -95,18 +96,41 @@
           %img.img-responsive{src: "http://placehold.it/300x200"}
           %h4.text-center Etiqueta
 
-%div.modal.fade{id: "regModal" , tabIndex: "-1", role: "dialog" , "aria-labelledby" => "myModalLabel",  "aria-hidden" => "true"}
+%div.modal.fade{id: "sign_up" , tabIndex: "-1", role: "dialog" , "aria-labelledby" => "myModalLabel",  "aria-hidden" => "true"}
   .modal-dialog
     .modal-content
       .modal-header
         %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
         %h4.modal-title{id: "myModalLabel"} Modal title
       .modal-body
-        =render 'devise/registrations/new'
-        \...
+        %h2 Sign up
+        = form_for(resource, :as => resource_name,
+                   :url => registration_path(resource_name),
+                   :html => {:id => "sign_up_user"},
+                   :format => :json,
+                   :remote => true,
+                   :validate => true ) do |f|
+          = devise_error_messages!
+          %div{id: "error-messages"}
+            %p
+          %div
+            =f.label :name
+            %br
+            =f.text_field :name, :autofocus => true
+          %div
+            = f.label :email
+            %br/
+            = f.email_field :email
+          %div
+            = f.label :password
+            %br/
+            = f.password_field :password
+          %div
+            = f.label :password_confirmation
+            %br/
+            = f.password_field :password_confirmation
+          %div= f.submit "Sign up", class: 'btn btn-success btn-medium'
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
         %button.btn.btn-primary{type: "button"} Save changes
-
-
 
