--- a/app/views/profile/index.html.haml
+++ b/app/views/profile/index.html.haml
@@ -4,7 +4,7 @@
       Mi perfil de Restaurante
       %small toda la info estara aqui
 .container
-  .row
+  .row-fluid
     .col-md-3
       %ul.nav.nav-pills.nav-stacked.table-bordered
         %li
