--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %img.img-responsive.logo{src: "http://placehold.it/182x46"}
+      %img.img-responsive.logo{src: "http://placehold.it/182x60"}
 
 
 
@@ -15,10 +15,10 @@
       -if user_signed_in?
         =current_user.email
       -else
-        %a.div-registro.navbar-right{"data-toggle"=>"modal","data-target"=>"#sign_up"}
-          %btn.btn.btn-success.btn-registro Crear una cuenta
-        %span.navbar-right.link-login{id: "head-signin"}
-          %a.signin{href: new_user_session_path } Entar
+        %span.navbar-right
+          =render "devise/sessions/new"
+
+
 
     / /.navbar-collapse
 / Main jumbotron for a primary marketing message or call to action
@@ -33,18 +33,38 @@
       .item.active
         %img.img-responsive{src: "http://placehold.it/1200x400"}
         .carousel-caption
-          %h3 Informacion
+          %h3 Slide 1
           %p esta es la informacion del slideshow kiwii
+          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+            %btn.btn.btn-success.btn-registro Crear una cuenta
       .item
         %img.img-responsive{src: "http://placehold.it/1200x400"}
+        .carousel-caption
+          %h3 Slide 2
+          %p esta es la informacion del slideshow kiwii
+          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+            %btn.btn.btn-success.btn-registro Crear una cuenta
+
       .item
         %img.img-responsive{src: "http://placehold.it/1200x400"}
+        .carousel-caption
+          %h3 Slide 3
+          %p esta es la informacion del slideshow kiwii
+          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+            %btn.btn.btn-success.btn-registro Crear una cuenta
+
       .item
         %img.img-responsive{src: "http://placehold.it/1200x400"}
-      %a.carousel-control.left{href:"#home-carousel" ,"data-slide"=>"prev"}
-        .glyphicon.glyphicon-chevron-left
-      %a.carousel-control.right{href:"#home-carousel" ,"data-slide"=>"next"}
-        .glyphicon.glyphicon-chevron-right
+        .carousel-caption
+          %h3 Slide 4
+          %p esta es la informacion del slideshow kiwii
+          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+            %btn.btn.btn-success.btn-registro Crear una cuenta
+
+    %a.carousel-control.left{href:"#home-carousel" ,"data-slide"=>"prev"}
+      .glyphicon.glyphicon-chevron-left
+    %a.carousel-control.right{href:"#home-carousel" ,"data-slide"=>"next"}
+      .glyphicon.glyphicon-chevron-right
   .row
     .col-md-12
       //%img{src: 'images/kiwii-index.jpg'}
@@ -101,36 +121,11 @@
     .modal-content
       .modal-header
         %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-        %h4.modal-title{id: "myModalLabel"} Modal title
+        %h4.modal-title.text-center{id: "myModalLabel"} Registro Kiwii
+
       .modal-body
-        %h2 Sign up
-        = form_for(resource, :as => resource_name,
-                   :url => registration_path(resource_name),
-                   :html => {:id => "sign_up_user"},
-                   :format => :json,
-                   :remote => true,
-                   :validate => true ) do |f|
-          = devise_error_messages!
-          %div{id: "error-messages"}
-            %p
-          %div
-            =f.label :name
-            %br
-            =f.text_field :name, :autofocus => true
-          %div
-            = f.label :email
-            %br/
-            = f.email_field :email
-          %div
-            = f.label :password
-            %br/
-            = f.password_field :password
-          %div
-            = f.label :password_confirmation
-            %br/
-            = f.password_field :password_confirmation
-          %div= f.submit "Sign up", class: 'btn btn-success btn-medium'
+        =render 'devise/registrations/new'
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
-        %button.btn.btn-primary{type: "button"} Save changes
+
 
