--- a/app/views/devise/registrations/_new.html.haml
+++ b/app/views/devise/registrations/_new.html.haml
@@ -1,30 +1,31 @@
+.alert.alert-warning.fade.in{id: "alerta-registro"}
+  %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
+  %strong
+    .text-center Debe ingresar todos los campos correctamente
+.form-registration.center
+  = form_for(resource, :as => resource_name,
+             :url => registration_path(resource_name),
+             :html => {:id => "sign_up_user",:class => 'form'},
+             :validate => true ,
+             :remote => true) do |f|
 
-= form_for(resource, :as => resource_name,
-           :url => registration_path(resource_name),
-           :html => {:id => "sign_up_user"},
-           :validate => true ,
-           :remote => true) do |f|
 
-  .alert.alert-warning.fade.in
-    %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
-    %strong
-      .text-center Debe ingresar todos los campos correctamente
 
-  %div
-    =f.label "UserName"
+    .form-group
+      =f.label "UserName"
+      %br
+      =f.text_field :name, :autofocus => true , id: 'name' ,:class=> "form-control"
+    .form-group
+      = f.label :email
+      %br/
+      = f.email_field :email , id: 'email',:class=> "form-control"
+    .form-group
+      = f.label :password
+      %br/
+      = f.password_field :password , id: 'password',:class=> "form-control"
+    .form-group
+      = f.label "Ingrese de nuevo el password"
+      %br/
+      = f.password_field :password_confirmation , id: 'password_confirmation',:class=> "form-control"
     %br
-    =f.text_field :name, :autofocus => true , id: 'name'
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email , id: 'email'
-  %div
-    = f.label :password
-    %br/
-    = f.password_field :password , id: 'password'
-  %div
-    = f.label "Ingrese de nuevo el password"
-    %br/
-    = f.password_field :password_confirmation , id: 'password_confirmation'
-  %br
-  %div= f.submit "Registrate", class: 'btn btn-success btn-medium full' ,id: 'btn-submit-reg'
+    %div= f.submit "Registrate", class: 'btn btn-success btn-medium full' ,id: 'btn-submit-reg'
