--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-.navbar.navbar-inverse.navbar-fixed-top{role: "navigation"}
+.navbar.navbar-default.navbar-fixed-top{role: "navigation"}
   .container
     .navbar-header
       %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", type: "button"}
@@ -6,14 +6,37 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %img.img-responsive.logo{src: "http://placehold.it/182x60"}
+      %img.img-responsive.logo{src: "http://placehold.it/182x40"}
 
 
 
-    .navbar-collapse.collapse
+
+    .collapse.navbar-collapse
 
       -if user_signed_in?
-        =current_user.email
+        %ul.nav.navbar-nav
+          %li &nbsp; &nbsp;
+          %li.active
+            %a{href: root_url}Home
+          %li
+            %a{href: my_restaurants_path}Mis Restaurantes
+
+
+        %ul.nav.navbar-nav.navbar-right
+          %li.dropdown{id:"fat-menu"}
+
+            %a{href:"#",id:"drop3", role:"button", class:"dropdown-toggle","data-toggle"=>"dropdown"}
+              =current_user.name
+              %span.caret
+            %ul.dropdown-menu{"aria-labelledby" => "drop3"}
+              %li
+                %a{tabindex:"-1", href: "#"} Action
+              %hr
+              %li
+                =link_to "Cerrar Sesion" , destroy_user_session_path, :method => :delete
+
+
+
       -else
         %span.navbar-right
           =render "devise/sessions/new"
@@ -23,54 +46,61 @@
     / /.navbar-collapse
 / Main jumbotron for a primary marketing message or call to action
 .container
-  .carousel.slide{id:"home-carousel"}
-    %ol.carousel-indicators
-      %li.active{"data-target"=>"#home-carousel","data-slide-to"=>"0"}
-      %li{"data-target"=>"#home-carousel","data-slide-to"=>"1"}
-      %li{"data-target"=>"#home-carousel","data-slide-to"=>"2"}
-      %li{"data-target"=>"#home-carousel","data-slide-to"=>"3"}
-    .carousel-inner
-      .item.active
-        %img.img-responsive{src: "http://placehold.it/1200x400"}
-        .carousel-caption
-          %h3 Slide 1
-          %p esta es la informacion del slideshow kiwii
-          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
-            %btn.btn.btn-success.btn-registro Crear una cuenta
-      .item
-        %img.img-responsive{src: "http://placehold.it/1200x400"}
-        .carousel-caption
-          %h3 Slide 2
-          %p esta es la informacion del slideshow kiwii
-          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
-            %btn.btn.btn-success.btn-registro Crear una cuenta
+  -unless user_signed_in?
+    .carousel.slide{id:"home-carousel"}
+      %ol.carousel-indicators
+        %li.active{"data-target"=>"#home-carousel","data-slide-to"=>"0"}
+        %li{"data-target"=>"#home-carousel","data-slide-to"=>"1"}
+        %li{"data-target"=>"#home-carousel","data-slide-to"=>"2"}
+        %li{"data-target"=>"#home-carousel","data-slide-to"=>"3"}
+      .carousel-inner
+        .item.active
+          %img.img-responsive{src: "http://placehold.it/1200x400"}
+          .carousel-caption
+            %h3 Slide 1
+            %p esta es la informacion del slideshow kiwii
+            %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+              %btn.btn.btn-success.btn-registro Crear una cuenta
+        .item
+          %img.img-responsive{src: "http://placehold.it/1200x400"}
+          .carousel-caption
+            %h3 Slide 2
+            %p esta es la informacion del slideshow kiwii
+            %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+              %btn.btn.btn-success.btn-registro Crear una cuenta
 
-      .item
-        %img.img-responsive{src: "http://placehold.it/1200x400"}
-        .carousel-caption
-          %h3 Slide 3
-          %p esta es la informacion del slideshow kiwii
-          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
-            %btn.btn.btn-success.btn-registro Crear una cuenta
+        .item
+          %img.img-responsive{src: "http://placehold.it/1200x400"}
+          .carousel-caption
+            %h3 Slide 3
+            %p esta es la informacion del slideshow kiwii
+            %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+              %btn.btn.btn-success.btn-registro Crear una cuenta
 
-      .item
-        %img.img-responsive{src: "http://placehold.it/1200x400"}
-        .carousel-caption
-          %h3 Slide 4
-          %p esta es la informacion del slideshow kiwii
-          %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
-            %btn.btn.btn-success.btn-registro Crear una cuenta
+        .item
+          %img.img-responsive{src: "http://placehold.it/1200x400"}
+          .carousel-caption
+            %h3 Slide 4
+            %p esta es la informacion del slideshow kiwii
+            %a{"data-toggle"=>"modal","data-target"=>"#sign_up", id:"btn-register"}
+              %btn.btn.btn-success.btn-registro Crear una cuenta
 
-    %a.carousel-control.left{href:"#home-carousel" ,"data-slide"=>"prev"}
-      .glyphicon.glyphicon-chevron-left
-    %a.carousel-control.right{href:"#home-carousel" ,"data-slide"=>"next"}
-      .glyphicon.glyphicon-chevron-right
+      %a.carousel-control.left{href:"#home-carousel" ,"data-slide"=>"prev"}
+        .glyphicon.glyphicon-chevron-left
+      %a.carousel-control.right{href:"#home-carousel" ,"data-slide"=>"next"}
+        .glyphicon.glyphicon-chevron-right
   .row
     .col-md-12
       //%img{src: 'images/kiwii-index.jpg'}
 
       %h2 Lista de Restaurantes
       %p Aqui se encontrara la lista de restaurantes registrados
+      %button.btn.btn-default{"data-container" => "body", "data-content" => "Vivamus sagittis lacus vel augue laoreet rutrum faucibus.", "data-original-title" => "", "data-placement" => "top", "data-toggle" => "popover", title: "", type: "button"}
+        Popover on top
+      .popover.fade.top.in{style: "top: 17287.84055328369px; left: 487.9659118652344px; display: block;"}
+        .arrow{style: "left: 50.18181818181818%;"}
+        %h3.popover-title{style: "display: none;"}
+        .popover-content Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
 
   =link_to "Borrar", destroy_user_session_path ,:method => :delete
   //tercera fila
