Restaurant profile view changed and carrierwave implemented in restaurant

--- a/app/views/profile/edit.js.erb
+++ b/app/views/profile/edit.js.erb
@@ -11,3 +11,4 @@
 
 $('#show').toggle().fadeIn(1000).html("<%= escape_javascript(render "restaurants/form_edit") %>");
 $('#btn-edit-restaurant').toggle()
+$('.alert').toggle()
