--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  *= require_self
  *= require_tree .
  *= require bootstrap
+ *= require jasny-bootstrap
+ *= require jasny-bootstrap-responsive
  */
 
 body {
@@ -49,6 +51,12 @@ body {
     margin-left: 10px;
     margin-right: 10px;
 }
+.center-info{
+
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 
 #btn-submit-reg{
     width: 40%;
@@ -108,3 +116,29 @@ body {
     width: 300px;
 
 }
+
+#thumb_restaurante{
+    height: 200px;
+}
+.full{
+    width: 100%;
+}
+
+.alert-container{
+    width: 100%;
+    height: 20px;
+    position: relative;
+}
+
+.alert-danger,.alert-success,.empty-alert{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.line-strong{
+    line-height: 36px;
+}
+
